delete and search documents from vector store (#26)
